--- a/doc/ccsd.tex
+++ b/doc/ccsd.tex
@@ -160,7 +160,7 @@ The wave function is stored in the class \texttt{wave\_functions.interm\_norm.In
 
 
 \newpage
-\section{Flowchart of the algorithm}
+\section{Flowchart}
 \label{sec:ccsd_flowchart}
 
 \input{ccsd_flowchart}
