--- a/doc/dist_Gr.tex
+++ b/doc/dist_Gr.tex
@@ -111,7 +111,7 @@ The detailed derivation of these expressions are not given here.
 
 
 \newpage
-\section{\textsf{\LARGE Algorithm 1}\\Using orbital rotations and the structure of a FCI wave function}
+\section{Algorithm 1: Using orbital rotations and the structure of a FCI wave function}
 \sectionmark{Algorithm 1}
 
 To find $\ket{\Phi_\text{minD}}$, it is equivalent to find the orbitals (namely, a basis of $\orbSp{}$) such that 
@@ -339,8 +339,7 @@ According to Absil:
   \end{equation}
 \end{itemize}
 
-\subsection{\textsf{\LARGE Algorithm 2}
-  Direct application to obtain $\ket{\Phi_\text{minD}}$}
+\subsection{Algorithm 2: Direct application to obtain $\ket{\Phi_\text{minD}}$}
 \label{sec:alg_two}
 
 We will now consider our specific function.
@@ -561,7 +560,7 @@ The vector $e_p$ is the $p$-th element of the canonical basis ($0$ in every entr
 $-th entry where it is $1$).
 
 
-\subsection{\textsf{\LARGE Algorithm 3} The case of a CISD wave function}
+\subsection{Algorithm 3: The case of a CISD wave function}
 
 Although Algorithm 2 already offers an improved procedure to calculate $\ket{\Psi_\text{minD}}$, as compared to Algorithm 1, it is still too general.
 It can be made much more efficient if the equations are adapted to a specific kind of wave function.
