--- a/doc/flowchart_defs.tex
+++ b/doc/flowchart_defs.tex
@@ -96,7 +96,7 @@
 \newcommand{\Y}[1]{-#1*0.182}
 
 \newcommand{\algloop}[4]{
-  \draw [->, rounded corners] (#1) -- ( #1 |- \X{-100},\Y{#2})  --  (\X{-50}, \Y{#2}) --
+  \draw [->, rounded corners=5mm] (#1) -- ( #1 |- \X{-100},\Y{#2})  --  (\X{-50}, \Y{#2}) --
   (\X{-50}, \Y{#3}) -- (\X{-15}, \Y{#3}) -- (#4);
 }
 
