--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -43,7 +43,7 @@
 \usepackage[makeroom]{cancel}
 \usepackage[table]{xcolor}
 \usepackage{capt-of}
-\usepackage{hyperref}
+\usepackage[colorlinks=true]{hyperref}
 
 \usepackage{tikz}
 \usetikzlibrary{calc}
