--- a/doc/ccsd_flowchart.tex
+++ b/doc/ccsd_flowchart.tex
@@ -5,12 +5,17 @@
   double,
   very thick]
 
+  \node (import) at (\X{-50}, \Y{-18}) [anchor=west]
+  {\texttt{from wave\_functions import interm\_norm}};
+  \node (import) at (\X{-50}, \Y{-15}) [anchor=west]
+  {\texttt{from coupled\_cluster import ccsd}};
+
   % ======
-  \node (init)  at (\X{10}, \Y{-15})
-  [algstep, text width=\W{60}]
+  \node (init)  at (\X{20}, \Y{-15})
+  [algstep, text width=\W{50}]
   {
     \textbf{Initialisation}\vspT
-    {$\Psi_{CC}$ as instance of \texttt{wave\_functions.IntermNormWF}}\vsp
+    {$\Psi_{CC}$ as instance of \texttt{interm\_norm.IntermNormWF}}\vsp
   };
   % ------
 
@@ -19,7 +24,8 @@
   [algstep, text width=\W{50}, hyperlink node=sec:ccsd_energy]
   {
     \textbf{Energy}\vspT
-    \texttt{wave\_functions.IntermNormWF.energy}\vsp
+    ?? \texttt{interm\_norm.IntermNormWF.energy}\vsp
+    ?? \texttt{ccsd.energy}\vsp
   };
   % ------
 
@@ -88,7 +94,7 @@
   [algstep, text width=\W{50}, hyperlink node=sec:ccsd_update]
   {
     \textbf{Update amplitudes}\vspT
-    \texttt{coupled\_cluster.ccsd.step}\vsp
+    \texttt{interm\_norm.IntermNormWF.update\_amplitudes}\vsp
   };
   % ------
 
@@ -99,7 +105,7 @@
   \draw [->, condTrue] (conv.0) -- (\X{30}, \Y{15});
   \draw [->] (cc_version.0) -- (transf_hg.180)
   node [midway, above, sloped] (cc) {CCSD};
-  \draw [->] (cc_version.270) .. controls +(down:1) and +(up:1) .. (res.115)
+  \draw [->] (cc_version.270) .. controls +(down:1) and +(up:1) .. (res.110)
   node [midway, above, sloped] (cc) {CCD};
   \draw [->] (transf_hg.270) .. controls +(down:1) and +(up:1) .. (res.70);
   \draw [->] (res.270) -- (update.90);
