--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -49,6 +49,7 @@
 \usetikzlibrary{calc}
 \usetikzlibrary{positioning}
 \usetikzlibrary{decorations.text}
+\usetikzlibrary{shapes.geometric}
 \usetikzlibrary{arrows.meta}
 
 \newcommand{\toBlue}{\color{blue}}
