--- a/doc/ccsd_flowchart.tex
+++ b/doc/ccsd_flowchart.tex
@@ -5,56 +5,116 @@
   double,
   very thick]
 
-  \node (import) at (\X{-50}, \Y{-18}) [anchor=west]
-  {\texttt{from wave\_functions import interm\_norm}};
-  \node (import) at (\X{-50}, \Y{-15}) [anchor=west]
+  \node (import) at (\X{-50}, \Y{-23}) [anchor=west]
+  {\texttt{from wave\_functions import int\_norm}};
+  \node (import) at (\X{-50}, \Y{-20}) [anchor=west]
   {\texttt{from coupled\_cluster import ccsd}};
 
   % ======
-  \node (init)  at (\X{20}, \Y{-15})
+  \node (start)  at (\X{25}, \Y{-23})
+  [startend, text width=\W{3}]{};
+  % ------
+
+  % ======
+  \node (init)  at (\X{25}, \Y{-15})
   [algstep, text width=\W{50}]
   {
     \textbf{Initialisation}\vspT
-    {$\Psi_{CC}$ as instance of \texttt{interm\_norm.IntermNormWF}}\vsp
+    {$\Psi_{CC}$ as instance of \texttt{int\_norm.IntermNormWaveFunction}}\vsp
   };
   % ------
 
   % ======
-  \node (ener)  at (\X{0}, \Y{0})
-  [algstep, text width=\W{50}, hyperlink node=sec:ccsd_energy]
+  \node (inter_matrix_1)  at (\X{25}, \Y{-3})
+  [algtest, text width=\W{15}, aspect=2]
+  {
+    \textbf{inter\_matrix}\vspT
+  };
+  % ------
+
+  % ======
+  \node (L)  at (\X{-6}, \Y{-3})
+  [algstep, text width=\W{25}, hyperlink node=sec:ccsd_inter_matrix]
+  {
+    \textbf{$L$ and $F^I$ matrices}\vspT
+    \texttt{ccsd.equation.L\_matrix}\vsp
+  };
+  % ------
+
+  % ======
+  \node (ener)  at (\X{-30}, \Y{0})
+  [algstep, text width=\W{15}, hyperlink node=sec:ccsd_energy]
   {
     \textbf{Energy}\vspT
-    ?? \texttt{interm\_norm.IntermNormWF.energy}\vsp
-    ?? \texttt{ccsd.energy}\vsp
+    \texttt{ccsd.energy}\vsp
   };
   % ------
 
   % ======
-  \node (conv)  at (\X{0}, \Y{15})
-  [algcond, text width=\W{20}, hyperlink node=sec:ccsd_energy]
+  \node (conv)  at (\X{-30}, \Y{15})
+  [algtest, text width=\W{11}, aspect=2]
   {
-    \textbf{Converged?}\vspT
-    {$|\Omega| < \epsilon$}\vsp
+    {$|\Omega| < \epsilon$}%\vsp
+    { or}\vsp
+    {i = maxit ?}
   };
   % ------
 
   % ======
-  \node (cc_version)  at (\X{-30}, \Y{30})
-  [algcond, text width=\W{20}]
+  \node (end)  at (\X{-30}, \Y{30})
+  [startend, text width=\W{3}]{};
+  % ------
+
+  % ======
+  \node (cc_version)  at (\X{0}, \Y{15})
+  [algtest, text width=\W{15},aspect=2.5]
   {
     \textbf{CC version?}\vspT
   };
   % ------
 
   % ======
-  \node (transf_hg)  at (\X{20}, \Y{30})
-  [algstep, text width=\W{50}, hyperlink node=sec:ccsd_energy]
+  \node (transf_hg)  at (\X{35}, \Y{15})
+  [algstep, text width=\W{30}, hyperlink node=sec:ccsd_t1_trans]
   {
-    \textbf{$T_1$ transformed Hamiltonian}\vspT
-    \texttt{coupled\_cluster.ccsd.get\_t1\_transf}\vsp
+    \textbf{$T_1$-transformed Hamiltonian}\vspT
+    \texttt{ccsd.get\_t1\_transf}\vsp
   };
   % ------
 
+  % ======
+  \node (inter_matrix_2)  at (\X{35}, \Y{30})
+  [algtest, text width=\W{15}, aspect=2]
+  {
+    \textbf{inter\_matrix}\vspT
+  };
+  % ------
+
+  % ======
+  \node (u_L_matrix)  at (\X{35}, \Y{44})
+  [algstep, text width=\W{30}, hyperlink node=sec:ccsd_inter_matrix]
+  {
+    \textbf{$u$, ${\tilde L}$ and ${\tilde F}^I$ matrices}\vspT
+    \texttt{ccsd...}\vsp
+  };
+  % ------
+  
+  % ======
+  \node (inter_matrix_3)  at (\X{0}, \Y{30})
+  [algtest, text width=\W{15}, aspect=2, hyperlink node=sec:ccsd_energy]
+  {
+    \textbf{inter\_matrix}\vspT
+  };
+  % ------
+
+  % ======
+  \node (u_matrix)  at (\X{0}, \Y{44})
+  [algstep, text width=\W{20}, hyperlink node=sec:ccsd_energy]
+  {
+    \textbf{$u$ matrix}\vspT
+    \texttt{ccsd...}\vsp
+  };
+  % ------
   
   % ================================================
   \node (res) at (\X{0}, \Y{70})
@@ -63,7 +123,7 @@
     \begin{minipage}[t][7cm]{1.0\textwidth}
       \centering
       \textbf{Set residual}\vspT
-      \texttt{coupled\_cluster.ccsd.equation}\vsp
+      \texttt{ccsd.equation}\vsp
     \end{minipage}
   };
 
@@ -73,7 +133,7 @@
   [algstep, text width=\W{30}, hyperlink node=sec:ccsd_res_sing]
   {
     \textbf{Singles, $\Omega_i^a$}\vspT
-    \texttt{ccsd.equation.res\_singles}\vsp
+    \texttt{ccsd.equation.\_res\_singles}\vsp
   };
   % ------
 
@@ -82,7 +142,7 @@
   [algstep, text width=\W{30}, hyperlink node=sec:ccsd_res_doub]
   {
     \textbf{Doubles, $\Omega_{ij}^{ab}$}\vspT
-    \texttt{ccsd.equation.res\_doubles}\vsp
+    \texttt{ccsd.equation.\_res\_doubles}\vsp
   };
   % ------
   
@@ -91,26 +151,37 @@
   
   % ======
   \node (update) at (\X{0}, \Y{100})
-  [algstep, text width=\W{50}, hyperlink node=sec:ccsd_update]
+  [algstep, text width=\W{60}, hyperlink node=sec:ccsd_update]
   {
     \textbf{Update amplitudes}\vspT
-    \texttt{interm\_norm.IntermNormWF.update\_amplitudes}\vsp
+    \texttt{int\_norm.IntermNormWaveFunction.update\_amplitudes}\vsp
   };
   % ------
 
 
-  \draw [->] (init.270) -- (ener.50);
+  \draw [->] (start.270) -- (init.90);
+  \draw [->] (init.270) -- (inter_matrix_1.90);
+  \draw [<-, condTrue]  (L.0) .. controls +(right:2) and +(left:1) ..(inter_matrix_1.180);
+  \draw [<-, condFalse] (ener.350) .. controls +(right:2) and +(down:1) .. (inter_matrix_1.270) ;
+  \draw [->] (L.187) -- (ener.10);
   \draw [->] (ener.270) -- (conv.90);
-  \draw [->, condFalse] (conv.180) .. controls +(left:2) and +(up:1) .. (cc_version.90);
-  \draw [->, condTrue] (conv.0) -- (\X{30}, \Y{15});
+  \draw [->, condNo] (conv.0) -- (cc_version.180);
+  \draw [->, condYes] (conv.270) -- (end.90);
   \draw [->] (cc_version.0) -- (transf_hg.180)
   node [midway, above, sloped] (cc) {CCSD};
-  \draw [->] (cc_version.270) .. controls +(down:1) and +(up:1) .. (res.110)
+  \draw [->] (cc_version.270) -- (inter_matrix_3.90)
   node [midway, above, sloped] (cc) {CCD};
-  \draw [->] (transf_hg.270) .. controls +(down:1) and +(up:1) .. (res.70);
+  \draw [->] (transf_hg.270) -- (inter_matrix_2.90);
+  \draw [->, condTrue]  (inter_matrix_2.270) -- (u_L_matrix.90);
+  \draw [<-, condFalse] (res.55)  .. controls +(up:1) and +(left:2) .. (inter_matrix_2.180);
+  \draw [->] (u_L_matrix.180)  .. controls +(left:1) and +(up:1) .. (res.55);
+  \draw [->, condTrue]  (inter_matrix_3.270) -- (u_matrix.90);
+  \draw [<-, condFalse] (res.135)  .. controls +(up:1) and +(left:2) .. (inter_matrix_3.180);
+  \draw [->] (u_matrix.180)  .. controls +(left:1) and +(up:1) .. (res.135);
   \draw [->] (res.270) -- (update.90);
 
-  \algloop{update.270}{110}{-10}{ener.130}
+  \algloop{update.270}{110}{-10}{ener.90}
+ % \algloop{update.270}{110}{-10}{ener.130}
   
 
   % ------
