--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -50,6 +50,7 @@
 \usetikzlibrary{positioning}
 \usetikzlibrary{decorations.text}
 \usetikzlibrary{shapes.geometric}
+\usetikzlibrary{shapes.multipart}
 \usetikzlibrary{arrows.meta}
 
 \newcommand{\toBlue}{\color{blue}}
