--- a/doc/flowchart_defs.tex
+++ b/doc/flowchart_defs.tex
@@ -115,6 +115,21 @@
       % finds text --- rules don't work without \XeTeXLinkBox.
       % Still builds correctly with pdflatex and lualatex
     }
+  },
+ %%% Test class diagrams
+  class/.style={
+    align=left,
+    rectangle split,
+    rectangle split parts=3,
+    rectangle split part fill={blue!20,white,white},
+    minimum size=6mm,
+    rounded corners=0mm,
+    very thick,
+    draw=black!50,
+   %     minimum width=2.5cm,
+   %     text width=2cm,
+   %     align=left%,
+  %     font=\itshape
   }
 }
 
@@ -141,6 +156,8 @@
   \draw [->, rounded corners=5mm] (#1) -- ( #1 |- \X{-100},\Y{#2})  --  (\X{-50}, \Y{#2}) --
   (\X{-50}, \Y{#3}) -- ( #4 |- \X{-15}, \Y{#3}) -- (#4);
 }
+
+
 
 %%% Local Variables:
 %%% mode: latex
